Fix vertical alignment of the progress percentage label

--- a/substanced/folder/static/css/multiupload.css
+++ b/substanced/folder/static/css/multiupload.css
@@ -72,4 +72,6 @@
 .file-in-progress .progress {
     margin-bottom: 0;
     margin-top: 24px;
+    /* line height to same as bar height */
+    line-height: 20px;
 }
